# python-ffmpeg-downloader

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test_n_pub.yml
sandbox/: test_appdirs.py
src/ffmpeg_downloader/: __init__.py  __main__.py  _backend.py  _config.py  _download_helper.py  _linux.py  _macos.py  _path.py  _progress.py  _win32.py  ffdl.py
src/ffmpeg_downloader/qt/: __init__.py  __main__.py  qt_compat.py  wizard.py
tests/: _test_downloads.py  _test_linux.py  _test_macos.py  _test_qt.py  _test_win.py  test.py  test_decompress.py  test_downloader.py  test_package.py  test_py7z.py
