[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "ffmpeg_downloader"
description = "FFmpeg Release Build Downloader"
readme = "README.rst"
keywords = ["multimedia", "ffmpeg", "ffprobe", "download"]
license = { text = "GPL-2.0 License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Conversion",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = ["requests", "tqdm>=4.40.0", "appdirs", "packaging"]

[project.urls]
Repository = "https://github.com/python-ffmpegio/python-ffmpeg-downloader"
Issues = "https://github.com/python-ffmpegio/python-ffmpegio-downloader/issues"
Pull_Requests = "https://github.com/python-ffmpegio/python-ffmpegio-downloader/pulls"

[project.scripts]
ffdl = "ffmpeg_downloader.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "ffmpeg_downloader.__version__" }
