[metadata]
name = ffmpeg_downloader
version = attr: ffmpeg_downloader.__version__
description = FFmpeg Release Build Downloader
long_description_content_type = text/x-rst
long_description = file: README.rst
keywords = multimedia, ffmpeg, ffprobe, download
license = GPL-2.0 License
    url=https://github.com/python-ffmpegio/python-ffmpeg-downloader
project_urls=
    Issues=https://github.com/python-ffmpegio/python-ffmpegio-downloader/issues
    Pull Requests=https://github.com/python-ffmpegio/python-ffmpegio-downloader/pulls
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Capture
    Topic :: Multimedia :: Video :: Conversion
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=ffmpeg_downloader
install_requires =
    requests
    tqdm>=4.40.0
    # patool;platform_system!='Linux'
    # pylzma
    appdirs
    packaging
python_requires = >=3.7,

[options.entry_points]
console_scripts=
    ffdl = ffmpeg_downloader.__main__:main
    